--- a/etc/supervisord.conf
+++ b/etc/supervisord.conf
@@ -2,7 +2,7 @@
 process_name=%(program_name)s
 directory = /home/www/personalEnv/PersonalWeb
 environment = PATH ="/home/www/personalEnv/bin"
-command=/home/www/personalEnv/bin/gunicorn PersonalWeb.wsgi:application -c /home/www/personalEnv/PersonalWeb/etc/gunicorn.py
+command=/home/www/personalEnv/bin/gunicorn BriefWeb.wsgi:application -c /home/www/personalEnv/PersonalWeb/etc/gunicorn.py
 autostart=true
 autorestart=true
 startsecs=10
